--- a/readme.adoc
+++ b/readme.adoc
@@ -9,12 +9,14 @@ For more information, please check the https://github.com/feedhenry/mobile-secur
 
 == Features
 - OpenID Connect Authentication
+- Single Sign-on
 - Mobile Access Control
 - Client Cert Authentication
 - Secure Data Storage
 - Buffer Overflow Protections
 - Device Trust Checks (Jailbreak, latest OS etc)
 - iOS Snapshot Caching Protection
+- Binary Protections (Automatic Reference Counting, ASLR, Stack Smashing Protection)
 - 2FA with OTP (via Keycloak)
 - Authentication Brute Force Detection (via Keycloak)
 - Account Lockout Policies (via Keycloak)
